@@ -1,5 +1,9 @@
 package enderbyteprograms.actionspeed.commands;
 
+import enderbyteprograms.actionspeed.ActionSpeedData;
+import enderbyteprograms.actionspeed.ActionSpeedMain;
+import enderbyteprograms.actionspeed.PlayerData;
+import enderbyteprograms.actionspeed.Utilities;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
@@ -11,16 +15,21 @@ import java.util.List;
 public class SpeedometerTabCompleter implements TabCompleter {
     @Override
     public List<String> onTabComplete(CommandSender commandSender, Command command, String s, String[] strings) {
-        if (strings.length == 0) {
-            return List.of(new String[]{"toggle","setunits","allowcolour","forceshutdown","restart","dumpdata","reload"});
+        if (strings.length == 1) {
+            List<String> nl =  Arrays.asList("toggle","setunits","allowcolour","forceshutdown","restart","dumpdata","reload");
+            return Utilities.comp_startswith(nl,strings[strings.length-1]);
         }
         else {
-            if (Arrays.stream(strings).toList().contains("setunits")) {
-                return List.of(new String[]{"m/s","km/h","mi/h","m/min","ft/s","mi/min","knots"});
-            } else if (Arrays.stream(strings).toList().contains("allowcolour")) {
-                return List.of(new String[]{"yes","no"});
+            if (Arrays.asList(strings).contains("setunits")) {
+                List<String> nl = Arrays.asList("m/s","km/h","mi/h","m/min","ft/s","mi/min","knots");
+                return Utilities.comp_startswith(nl,strings[strings.length-1]);
+            } else if (Arrays.asList(strings).contains("allowcolour")) {
+                List<String> nl = Arrays.asList("yes", "no");
+                return Utilities.comp_startswith(nl, strings[strings.length - 1]);
+
             } else {
-                return List.of(new String[]{"toggle","setunits","allowcolour","forceshutdown","restart","dumpdata","reload"});
+                List<String> nl = Arrays.asList("toggle","setunits","allowcolour","forceshutdown","restart","dumpdata","reload");
+                return Utilities.comp_startswith(nl,strings[strings.length-1]);
             }
         }
     }
